2011-02-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Tests/GNUmakefile: Run/clean tests
	* Tests/gui: Imported from testsuite

2011-02-15 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSDisplayServer.h,
	* Source/GSDisplayServer.m (-recolorcursor:::, -recolorcursor:::)
	(-setcursor:, -freecursor:): New backend methods replacing
	-setcursorcolor:::.
	* Source/NSCursor.m,
	* Source/GSDragView.m: Use new cursor methods.

2011-02-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (-setContentView:): Revert Wolfgangs change
	and add a different solution as explained in his mail.

2011-02-14  Wolfgang Lux  <wolfgang.lux@gmail.com>>

	* Source/NSApplication.m (-_initDefaults):
	* Source/NSWindow.m (-_initDefaults):
	Add user default to allow placing app icons and mini windows at
	normal window level. This is particularly convenient with some
	window managers (*cough*, kwin) where application and pop up menus
	are obscured by dock level windows.

2011-02-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSWindow.m (-setContentView:): Fix bug where a stray view
	could leak when changing the content view of a window. This view
	then could make the title bar buttons inaccessible when -gui
	handles window decorations.

2011-02-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTabViewItem.m (-init, -initWithItemIdentifier:):
	Create a default content view for new tab view items. Compatible
	with Apple.

2011-02-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSOutlineView.m (-editColumn:...select:): Bring closer to
	the new code in [-drawRow:clipRect:].
	* Source/GSInfoPanel.m (-initWithDictionary:): Protect against
	icon being nil.

2011-02-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCursor.m,
	* Source/GSDragView.m,
	* Source/GSMemoryPanel.m: Fix Use-after-release found by static analyser.

2011-02-10 German Arias <german@xelalug.org>

	* Source/GSGormLoader.m (+initialize): Load the app icon here, at launch